--- a/HZAsiaPro/HZAsiaPro/Info.plist
+++ b/HZAsiaPro/HZAsiaPro/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.zj.demo.HZAsiaPro</string>
+	<string>com.ai.jsb</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
